--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,3 @@
-<h1>Sign up</h1>
+<h1>ユーザー新規登録</h1>
 
-<%= form_with(model: @user, local: true) do |f| %>
-  <div id="error_explanation">
-    <% @user.errors.full_messages.each do |message| %>
-      <%= message %>
-    <% end %>
-  </div>
-
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-
-  <%= f.label :email %>
-  <%= f.email_field :email %>
-
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
-
-  <%= f.submit "Create my account" %>
-<% end %>
+<%= render 'form' %>
