記事投稿機能作成

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
   <%= form_with(model: @question, local: true, url: choose_new_or_edit) do |form| %>
-    <div id="error_explanation">
-      <h2><%= @question.errors.count %>件のエラーがあります。</h2>
-      <ul>
-        <% @question.errors.full_messages.each do |msg| %>
-          <li><%= msg %></li>
-        <% end %>
-      </ul>
-    </div>
+    <% if @question.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= @question.errors.count %>件のエラーがあります。</h2>
+        <ul>
+          <% @question.errors.full_messages.each do |msg| %>
+            <li><%= msg %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
     <div>
       <%= form.label :title %>
@@ -20,11 +22,13 @@
     <div>
       <p><%= form.label :image %></p>
       <p><%= form.file_field :image, id: :@question_image %></p>
-      <%= image_tag(@question.image.url) if @question.image.url %>
+      <%= image_tag(@question.image) if @question.image.present? %>
       <%= form.hidden_field :image_cache %>
     </div>
-    <%= form.submit %>
+    <%= form.submit "投稿" %>
   <% end %>
+
+  <br>
 
   <%= link_to "投稿一覧画面にもどる", questions_path %>
 </div>
