--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,8 +1,8 @@
-<h1>投稿一覧</h1>
+<h1>質問一覧</h1>
 
 <table>
   <tr>
-    <th>投稿者名</th>
+    <th>質問者名</th>
     <th>タイトル</th>
   </tr>
 
@@ -16,4 +16,4 @@
 
 <br>
 
-<%= link_to '投稿する', new_question_path %>
+<%= link_to '質問する', new_question_path %>
