--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,6 +1,6 @@
-<h1>投稿詳細画面</h1>
+<h1>質問詳細画面</h1>
 
-<p>投稿者名: <%= @question.user.name %></p>
+<p>質問者名: <%= @question.user.name %></p>
 <p>
   <%= image_tag(@question.image) %>
 </p>
@@ -14,4 +14,4 @@
 
 <br>
 
-<%= link_to "投稿一覧画面にもどる", questions_path %>
+<%= link_to "質問一覧画面にもどる", questions_path %>
