ログイン機能追加修正

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,9 +1,11 @@
 <%= form_with(model: @user, local: true,) do |form| %>
-  <div id="error_explanation">
-    <% @user.errors.full_messages.each do |message| %>
-      <%= message %>
-    <% end %>
-  </div>
+  <% if @question.errors.any? %>
+    <div id="error_explanation">
+      <% @user.errors.full_messages.each do |message| %>
+        <%= message %>
+      <% end %>
+    </div>
+  <% end %>
 
   <%= form.label :name %>
   <%= form.text_field :name %>
