--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_with(model: @question, local: true, url: choose_new_or_edit) do |form| %>
+  <%= form_with(model: @question, local: true, url: choose_new_or_edit_question) do |form| %>
     <% if @question.errors.any? %>
       <div id="error_explanation">
         <h2><%= @question.errors.count %>件のエラーがあります。</h2>
