--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <%= form_with(model: @report, local: true, url: choose_new_or_edit) do |form| %>
+  <%= form_with(model: @report, local: true, url: choose_new_or_edit_report) do |form| %>
     <% if @report.errors.any? %>
       <div id="error_explanation">
         <h2><%= @report.errors.count %>件のエラーがあります。</h2>
