--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -12,6 +12,14 @@
   <p><%= link_to '削除', question_path(@question.id), method: :delete, data: { confirm: '本当に削除していいですか？' } %></p>
 <% end %>
 
+<% unless @question.user_id == current_user.id %>
+  <% if @fav_ques.present? %>
+    <%= link_to 'お気に入り解除する', fav_que_path(id: @fav_ques.id), method: :delete, class: 'btn btn-danger' %>
+  <% else %>
+    <%= link_to 'お気に入りする', fav_ques_path(question_id: @question.id), method: :post, class: 'btn btn-primary' %>
+  <% end %>
+<% end %>
+
 <br>
 
 <p>回答一覧</p>
