--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -14,9 +14,13 @@
 
 <% unless @report.user_id == current_user.id %>
   <% if @fav_rpts.present? %>
-    <%= link_to 'お気に入り解除する', fav_rpt_path(id: @fav_rpts.id), method: :delete, class: 'btn btn-danger' %>
+    <%= link_to fav_rpt_path(id: @fav_rpts.id), method: :delete do %>
+      <span class="fa fa-heart like-btn-unlike"></span>
+    <% end %>
   <% else %>
-    <%= link_to 'お気に入りする', fav_rpts_path(report_id: @report.id), method: :post, class: 'btn btn-primary' %>
+    <%= link_to fav_rpts_path(report_id: @report.id), method: :post do %>
+      <span class="fa fa-heart like-btn"></span>
+    <% end %>
   <% end %>
 <% end %>
 
