--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,9 +14,14 @@
 
     <% if user_signed_in? %>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+      <%= link_to "マイページ", user_path(current_user.id) %>
+      <%= link_to "投稿一覧", reports_path %>
+      <%= link_to "質問一覧", questions_path %>
     <% else %>
       <%= link_to "新規登録", new_user_registration_path %>
       <%= link_to "ログイン", new_user_session_path %>
+      <%= link_to "投稿一覧", reports_path %>
+      <%= link_to "質問一覧", questions_path %>
     <% end %>
 
     <% if notice %>
