ユーザーアイコン実装

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -36,6 +36,11 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
+  <div class="field">
+    <p><%= f.label :icon_image %></p>
+    <p><%= f.file_field :icon_image, id: :user_icon_image %></p>
+  </div>
+
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
