--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -25,7 +25,7 @@
     </div>
     <div>
       <p><%= form.label :image %></p>
-      <p><%= form.file_field :image, id: :@report_image %></p>
+      <p><%= form.file_field :image, id: :report_image %></p>
       <%= image_tag(@report.image) if @report.image.present? %>
       <%= form.hidden_field :image_cache %>
     </div>
