--- a/app/views/answers/_index.html.erb
+++ b/app/views/answers/_index.html.erb
@@ -2,6 +2,7 @@
   <% answers.each do |answer| %>
     <% if answer.id.present? %>
       <li>
+        <p>回答者名：<%= answer.user.name %></p>
         <p><%= answer.content %></p>
       </li>
     <% end %>
