--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-6 col-md-7 mx-auto">
-      <h2>Edit <%= resource_name.to_s.humanize %></h2><hr><hr>
+      <h2>ユーザー情報を編集</h2><hr><hr>
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= devise_error_messages! %>
@@ -22,22 +22,22 @@
         <% end %>
 
         <div class="field">
-          <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
+          <%= f.label :password %> <i>(変更したくない場合は空白のままにしてください)</i><br />
+          <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
           <% if @minimum_password_length %>
             <br />
-            <em><%= @minimum_password_length %> characters minimum</em>
+            <em>※最低 <%= @minimum_password_length %>文字</em>
           <% end %>
         </div><hr>
 
         <div class="field">
           <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          <%= f.password_field :password_confirmation, autofocus: true, autocomplete: "new-password" %>
         </div><hr>
 
         <div class="field">
-          <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-          <%= f.password_field :current_password, autocomplete: "current-password" %>
+          <%= f.label :current_password %> <i>(変更を確認するために現在のパスワードが必要です)</i><br />
+          <%= f.password_field :current_password, autofocus: true, autocomplete: "current-password" %>
         </div><hr>
 
         <div class="field">
