--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,7 +20,7 @@
         <div class="field">
           <%= f.label :password %>
           <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <em>(最低 <%= @minimum_password_length %>文字)</em>
           <% end %><br />
           <%= f.password_field :password, autocomplete: "new-password" %>
         </div><hr>
