レビュー指摘内容を反映

--- a/app/views/answers/_form.html.erb
+++ b/app/views/answers/_form.html.erb
@@ -12,7 +12,7 @@
 
   <div class="field">
     <%= form.label :content, "回答内容" %><br>
-    <%= form.text_area :content %>
+    <%= form.text_area :content, :size=>"50x10" %>
   </div>
 
   <div class="actions">
