--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-6 col-md-7 mx-auto">
+    <div class="col-lg-8 col-md-9 mx-auto">
       <%= form_with(model: @report, local: true, url: choose_new_or_edit_report) do |form| %>
         <% if @report.errors.any? %>
           <div id="error_explanation">
@@ -24,8 +24,8 @@
         </div><hr>
 
         <div class="field">
-          <%= form.label :content, "質問内容" %><br>
-          <%= form.text_field :content %>
+          <%= form.label :content, "投稿内容" %><br>
+          <%= form.text_area :content, :size=>"64x30" %>
         </div><hr>
 
         <div class="field">
