--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -28,7 +28,7 @@
 
         <div class="field">
           <%= form.label :content %><br>
-          <%= form.text_area :content %>
+          <%= form.text_area :content, :size=>"45x10" %>
         </div><hr>
 
         <div class="actions">
