--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -4,12 +4,15 @@
     <div class="col-lg-6 col-md-7 mx-auto">
       <div class="post-preview">
         <h1>投稿詳細画面</h1>
+        <hr><hr>
 
-        <p>投稿者名:：<%= @report.user.name %></p>
+        <h2 class="post-title">
+          タイトル：<%= @report.title %>
+        </h2>
+        <p>投稿者名:：<%= link_to @report.user.name, "/users/#{@report.user.id}" %></p>
         <p>
           <%= image_tag(@report.image) if @report.image.present? %>
         </p>
-        <p>タイトル：<%= @report.title %></p>
         <p>関連タグ：<%= render 'reports/tag_list', tag_list: @report.relation_word_list %></p>
         <p>内容：<%= @report.content %></p>
 
@@ -27,8 +30,8 @@
             <%= link_to fav_rpts_path(report_id: @report.id), method: :post do %>
               <span class="fa fa-heart like-btn"></span>
             <% end %>
-          <% end %>
-        <% end %><br><br>
+          <% end %><br><br>
+        <% end %>
 
         <%= link_to "投稿一覧画面にもどる", reports_path %>
       </div>
