--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,11 +6,13 @@
         <h1>質問画面</h1>
         <hr><hr>
 
-        <p>質問者名：<%= @question.user.name %></p>
+        <h2 class="post-title">
+          タイトル：<%= @question.title %>
+        </h2>
+        <p>質問者名：<%= link_to @question.user.name, "/users/#{@question.user.id}" %></p>
         <p>
           <%= image_tag(@question.image) if @question.image.present? %>
         </p>
-        <p>タイトル：<%= @question.title %></p>
         <p>関連タグ：<%= render 'questions/tag_list', tag_list: @question.relation_word_list %></p>
         <p>内容：<%= @question.content %></p>
 
@@ -41,9 +43,7 @@
 
         <!-- 回答入力欄を質問の詳細ページに表示するためのrender -->
         <%= render partial: 'answers/form', locals: { answer: @answer, question: @question } %>
-
         <br>
-
         <%= link_to "質問一覧画面にもどる", questions_path %>
       </div>
     </div>
