--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,9 +7,11 @@
       </p>
       <h4><%= @user.name %>のページ</h4>
       <p>ユーザー貢献度：<%= @user_points %> points</p>
-      <p>
-        <%= link_to 'ユーザー情報を編集', edit_user_registration_path(@user.id) %>
-      </p>
+      <% if @user == current_user %>
+        <p>
+          <%= link_to 'ユーザー情報を編集', edit_user_registration_path(@user.id) %>
+        </p>
+      <% end %>
     </div>
   </div><hr>
   <div class="row">
