--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('images/header_img.jpg')">
+    <header class="masthead" style="background-image: url(<%= asset_path "header_img.jpg" %>)">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
